examples/good/11-02-nested-return.lagger
int f(){
    if (true){
        return 1;
    } else {
        return 2;
    }
}

int main(){
    println(f());
    return 0;
}