examples/bad/13-01-function-out-of-scope.lagger
int main(){

    int f(){

        int g(){
            return 1;
        }

        return g(); // to jest ok
    }

    return g(); // tego juz nie widzimy
}